@@ -167,8 +167,17 @@
                     <wait>false</wait>
                     <configuration>
                         <home>${project.build.directory}/tomcat5x</home>
+                        <configfiles>
+                            <!-- prevents Cargo from spewing reams of log messages -->
+                            <configfile>
+                                <file>${basedir}/src/main/resources/logback.xml</file>
+                                <todir>conf</todir>
+                            </configfile>
+                        </configfiles>
                         <properties>
+                            <!--<cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y -Xmx512M -XX:MaxPermSize=512M</cargo.jvmargs>-->
                             <cargo.servlet.port>8900</cargo.servlet.port>
+                            <cargo.logging>low</cargo.logging>
                         </properties>
                     </configuration>
                 </configuration>
